--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,6 @@
     "files.exclude": {
         "**/*.pyc": {"when": "$(basename).py"},
         "**/__pycache__": true,
-        "**/*.pytest_cache": true,
-        "**/.dbeaver/.data-sources.json.bak": true,
-        "**/.dbeaver/data-sources.json": true,
-        "**/.deaver": true
+        "**/*.pytest_cache": true
     }
 }
